Added dog image

--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -7,5 +7,9 @@
 
   <body>
     <h1>About Page</h1>
+
+    <img src="../images/dog.jpg" alt="Charles the dog" height="853" width="640">
+  
+
   </body>
 </html>
