--- a/links-and-images/misc/extras.html
+++ b/links-and-images/misc/extras.html
@@ -8,5 +8,7 @@
 
     <p>This page is about miscellaneous HTML things, but you may also be interested in <a href="../links.html">links</a> or <a href="../images.html"> images</a>.</p>
 
+    <p>An extra entry for testing git commit messages!</p>
+    
 </body>
 </html>
