Apply knowledge of commit message writing
After reading through How to Write a Git Commit Message, I have learned
that best practice is to write the Subject line in the imperative mood,
and not the indicative mood, which is more natural.

This commit will show an application of this.

--- a/links-and-images/misc/extras.html
+++ b/links-and-images/misc/extras.html
@@ -9,6 +9,8 @@
     <p>This page is about miscellaneous HTML things, but you may also be interested in <a href="../links.html">links</a> or <a href="../images.html"> images</a>.</p>
 
     <p>An extra entry for testing git commit messages!</p>
-    
+
+    <p>Reading through how to write commit messages and applying knowledge.</p>
+
 </body>
 </html>
